# mus

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: create-release.yaml  create-release.yml  create_release.yaml  github_workflows_run-tests.yml  on-main.yml  on-pr.yml  release-latest.yml  release_latest.yaml  run-tests-job.yml  run-tests-on-main.yml
examples/: a_bot.py
mus/: __init__.py  __main__.py  functions.py  interpreter.py  main.py  stubs.py  types.py
mus/example_scripts/: input_test.py
mus/llm/: __init__.py  anthropic.py  llm.py  types.py
scripts/: build_guest.py  build_guest.sh  get_version.py
src/mus/: __init__.py  __main__.py  _sandbox.py  exceptions.py  functions.py  helpers.py  interpreter.py  main.py  sandbox.py  state.py  types.py
src/mus/converters/: delta.py
src/mus/guest/: guest.wit  main.py
src/mus/llm/: __init__.py  anthropic.py  bedrock.py  exceptions.py  google.py  llm.py  mistral.py  mock_client.py  openai.py  types.py
src/mus/mcp/: client.py  server.py  uri_matcher.py
src/mus/pyodide/: __init__.py  anthropic.py  httpx.py
tests/: helpers.py  test_anthropic.py  test_bedrock.py  test_bot.py  test_dsl_interpreter.py  test_functions.py  test_functions_verify_inputs.py  test_google.py  test_llm.py  test_mcp_client.py  test_mcp_server.py  test_mcp_uri_matcher.py  test_mistral.py  test_openai.py  test_query_type.py  test_retries.py  test_sandbox.py  test_state.py
tests/pyodide/: test_httpx.py
