[project]
name = "mus"

dependencies  = [
    "jsonpickle(>=3.4.2,<4.0.0)",
    "requests(>=2.32.3,<3.0.0)",
    "jsonref(>=1.1.0,<2.0.0)",
]

[tool.poetry]
name = "mus"
version = "0.7.3"
description = ""
authors = ["Jens Jepsen <jens.jepsen@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.requires-plugins]
poethepoet = "^0.33.0"

[project.optional-dependencies]
bedrock = ["boto3(>=1.35.95,<2.0.0)",  "boto3-stubs[bedrock-runtime](>=1.35.95,<2.0.0)"]
anthropic  = ["anthropic[bedrock](>=0.42.0,<1.0.0)"]
openai  = ["openai(>=1.61.1,<2.0.0)"]
images  = ["pillow(>=11.0.0,<12.0.0)"]
cli  = ["typer(>=0.13.0,<0.14.0)"]
poetry = ["partial_json_parser>=0.2.1.1.post5"]
sandbox = ["extism>=1.0.0"]
all = ["boto3(>=1.35.95,<2.0.0)", "extism>=1.0.0", "boto3-stubs[bedrock-runtime](>=1.35.95,<2.0.0)", "anthropic[bedrock](>=0.42.0,<1.0.0)", "openai(>=1.61.1,<2.0.0)", "pillow(>=11.0.0,<12.0.0)", "typer(>=0.13.0,<0.14.0)"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
bump2version = "^1.0.1"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
coverage = {extras = ["toml"], version = "^7.6.10"}
pytest-md-report = "^0.6.3"
sybil = {extras = ["pytest"], version = "^9.0.0"}


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.3"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "if (t\\.|typing\\.|)TYPE_CHECKING:",
    "class .*\\bProtocol.*\\):",
    "@(abc\\.)?abstractmethod",
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
pre_build = "setup-extism"

#[tool.poe.tasks.build-types]
#command = "shell:echo bob"
#description = "Builds the type stubs for the project"

[tool.poe.tasks.setup-extism]
shell = "curl -Ls https://raw.githubusercontent.com/extism/python-pdk/main/install.sh | bash"

[tool.poe.tasks.test]
shell = "poetry run pytest"
help = "Run the tests"