[project]
name = "mus"
version = "0.12.0"
description = ""
authors = [
    {name="Jens Jepsen", email="jens.jepsen@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "==3.12.*"

dependencies  = [
    "jsonpickle(>=3.4.2,<5.0.0)",
    "requests(>=2.32.3,<3.0.0)",
    "jsonref(>=1.1.0,<2.0.0)",
    "pydantic==2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/build_guest.py"

[project.optional-dependencies]
bedrock = ["boto3(>=1.35.95,<2.0.0)",  "boto3-stubs[bedrock-runtime](>=1.35.95,<2.0.0)", "anyio>=4.9.0"]
anthropic  = ["anthropic[bedrock](>=0.42.0,<1.0.0)"]
openai  = ["openai(>=1.61.1,<2.0.0)"]
images  = ["pillow(>=11.0.0,<12.0.0)"]
cli  = ["typer(>=0.13.0,<0.16.0)"]
poetry = ["partial_json_parser>=0.2.1.1.post5"]
sandbox = ["extism>=1.0.4"]
dev = [
    "pytest(>=8.3.3,<9.0.0)",
    "bump2version(>=1.0.1,<2.0.0)",
    "pytest-asyncio(>=0.25.3,<1.0.0)",
    "pytest-cov(>=6.0.0,<7.0.0)",
    "coverage[toml](>=7.6.10,<8.0.0)",
    "pytest-md-report(>=0.6.3,<1.0.0)",
    "sybil[pytest](>=9.0.0,<10.0.0)",
    "pyright(>=1.1.398,<2.0.0)"
]
all = [
    "boto3(>=1.35.95,<2.0.0)", 
    "boto3-stubs[bedrock-runtime](>=1.35.95,<2.0.0)",
    "anthropic[bedrock](>=0.42.0,<1.0.0)",
    "openai(>=1.61.1,<2.0.0)",
    "pillow(>=11.0.0,<12.0.0)",
    "typer(>=0.13.0,<0.16.0)",
    "extism>=1.0.4"
]

[tool.uv]
native-tls = true
package = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.12.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests", "*.md"]
addopts = "--cov=src"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "if (t\\.|typing\\.|)TYPE_CHECKING:",
    "class .*\\bProtocol.*\\):",
    "@(abc\\.)?abstractmethod",
    ]
